src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Europe Sales Process</fullName>
        <description>Used in Europe and Africa for TO and Project opportunities through March 2013; no longer used</description>
        <isActive>false</isActive>
        <values>
            <fullName>1 Lead</fullName>
        </values>
        <values>
            <fullName>2 Capture</fullName>
        </values>
        <values>
            <fullName>3 Submitted</fullName>
        </values>
        <values>
            <fullName>4 Project on hold</fullName>
        </values>
        <values>
            <fullName>5 SNB%2FWin%2FAward</fullName>
        </values>
        <values>
            <fullName>6 Contracted%2FBooked%2FWon</fullName>
        </values>
        <values>
            <fullName>7 Canceled by Client</fullName>
        </values>
        <values>
            <fullName>8 No-Go</fullName>
        </values>
        <values>
            <fullName>9 Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Europe Sales Process - Programs</fullName>
        <description>For Europe and Africa Program opportunities through March 2013. Uses different Stages 5 and 6. No longer in use.</description>
        <isActive>false</isActive>
        <values>
            <fullName>1 Lead</fullName>
        </values>
        <values>
            <fullName>2 Capture</fullName>
        </values>
        <values>
            <fullName>3 Submitted</fullName>
        </values>
        <values>
            <fullName>4 Project on hold</fullName>
        </values>
        <values>
            <fullName>5A Program in Negotiation</fullName>
        </values>
        <values>
            <fullName>5B Program Signed and Active</fullName>
        </values>
        <values>
            <fullName>6A Program Closed%2FCompleted</fullName>
        </values>
        <values>
            <fullName>7 Canceled by Client</fullName>
        </values>
        <values>
            <fullName>8 No-Go</fullName>
        </values>
        <values>
            <fullName>9 Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Opportunity Sales Process</fullName>
        <description>Since March 2013, used for all TO and Project opportunities.</description>
        <isActive>true</isActive>
        <values>
            <fullName>1 Lead</fullName>
        </values>
        <values>
            <fullName>1A Lead - Scout</fullName>
        </values>
        <values>
            <fullName>1B Lead - Engage</fullName>
        </values>
        <values>
            <fullName>1C Lead - Position</fullName>
        </values>
        <values>
            <fullName>2 Capture</fullName>
        </values>
        <values>
            <fullName>2A Capture - LOI</fullName>
        </values>
        <values>
            <fullName>2B Capture - EOI</fullName>
        </values>
        <values>
            <fullName>2C Capture - SOQ</fullName>
        </values>
        <values>
            <fullName>2D Capture - RFI</fullName>
        </values>
        <values>
            <fullName>2E Capture - RFP</fullName>
        </values>
        <values>
            <fullName>3 Submitted</fullName>
        </values>
        <values>
            <fullName>3A Capture - Proposal Submitted</fullName>
        </values>
        <values>
            <fullName>3B Capture - Short List</fullName>
        </values>
        <values>
            <fullName>3C Capture - Interview</fullName>
        </values>
        <values>
            <fullName>4 Project on hold</fullName>
        </values>
        <values>
            <fullName>5 SNB%2FWin%2FAward</fullName>
        </values>
        <values>
            <fullName>6 Contracted%2FBooked%2FWon</fullName>
        </values>
        <values>
            <fullName>7 Canceled by Client</fullName>
        </values>
        <values>
            <fullName>8 No-Go</fullName>
        </values>
        <values>
            <fullName>9 Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Opportunity Sales Process - Programs</fullName>
        <description>For all Program opportunities. Uses different Stages 5 and 6</description>
        <isActive>true</isActive>
        <values>
            <fullName>1 Lead</fullName>
        </values>
        <values>
            <fullName>1A Lead - Scout</fullName>
        </values>
        <values>
            <fullName>1B Lead - Engage</fullName>
        </values>
        <values>
            <fullName>1C Lead - Position</fullName>
        </values>
        <values>
            <fullName>2 Capture</fullName>
        </values>
        <values>
            <fullName>2A Capture - LOI</fullName>
        </values>
        <values>
            <fullName>2B Capture - EOI</fullName>
        </values>
        <values>
            <fullName>2C Capture - SOQ</fullName>
        </values>
        <values>
            <fullName>2D Capture - RFI</fullName>
        </values>
        <values>
            <fullName>2E Capture - RFP</fullName>
        </values>
        <values>
            <fullName>3 Submitted</fullName>
        </values>
        <values>
            <fullName>3A Capture - Proposal Submitted</fullName>
        </values>
        <values>
            <fullName>3B Capture - Short List</fullName>
        </values>
        <values>
            <fullName>3C Capture - Interview</fullName>
        </values>
        <values>
            <fullName>4 Project on hold</fullName>
        </values>
        <values>
            <fullName>5A Program in Negotiation</fullName>
        </values>
        <values>
            <fullName>5B Program Signed and Active</fullName>
        </values>
        <values>
            <fullName>6A Program Closed%2FCompleted</fullName>
        </values>
        <values>
            <fullName>7 Canceled by Client</fullName>
        </values>
        <values>
            <fullName>8 No-Go</fullName>
        </values>
        <values>
            <fullName>9 Lost</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AECOM_Department_2_Percent__c</fullName>
        <label>Department 2 Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AECOM_Department_2_Practice_Area__c</fullName>
        <label>Department2 AECOM Work</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AECOM_Department_2_Program_Gross_Revenue__c</fullName>
        <formula>AECOM_Department_2_Percent__c * Ceiling_Amount_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department 2 Program Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AECOM_Department_2_Program_Net_Revenue__c</fullName>
        <formula>AECOM_Department_2_Percent__c * Net_Revenue_Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department 2 Program Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AECOM_Department_2_Sub_Practice_Area__c</fullName>
        <label>Department 2 Sub Practice Area</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AECOM_Department_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department 2</label>
        <referenceTo>AECOM_Primary_Department__c</referenceTo>
        <relationshipLabel>Opportunities (AECOM Department 2)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AECOM_Department_3_Percent__c</fullName>
        <label>Department 3 Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AECOM_Department_3_Practice_Area__c</fullName>
        <label>Department3 AECOM Work</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AECOM_Department_3_Program_Gross_Revenue__c</fullName>
        <formula>AECOM_Department_3_Percent__c * Ceiling_Amount_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department 3 Program Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AECOM_Department_3_Program_Net_Revenue__c</fullName>
        <formula>AECOM_Department_3_Percent__c * Net_Revenue_Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department 3 Program Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AECOM_Department_3_Sub_Practice_Area__c</fullName>
        <label>Department 3 Sub Practice Area</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AECOM_Department_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department 3</label>
        <referenceTo>AECOM_Primary_Department__c</referenceTo>
        <relationshipLabel>Opportunities (AECOM Department 3)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AECOM_Department_4_Percent__c</fullName>
        <label>Department 4 Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AECOM_Department_4_Practice_Area__c</fullName>
        <label>Department4 AECOM Work</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AECOM_Department_4_Program_Gross_Revenue__c</fullName>
        <formula>AECOM_Department_4_Percent__c * Ceiling_Amount_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department 4 Program Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AECOM_Department_4_Program_Net_Revenue__c</fullName>
        <formula>AECOM_Department_4_Percent__c * Net_Revenue_Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department 4 Program Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AECOM_Department_4_Sub_Practice_Area__c</fullName>
        <label>Department 4 Sub Practice Area</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AECOM_Department_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department 4</label>
        <referenceTo>AECOM_Primary_Department__c</referenceTo>
        <relationshipLabel>Opportunities (AECOM Department 4)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AECOM_Fee__c</fullName>
        <description>Used for rollup to Account. 
Visibility is extremely limited to avoid confusion between program and Project/TO value.</description>
        <formula>Amount + Program_Estimated_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AECOM Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AECOM_Job_number__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Enter project number(s) for contracted jobs (Oracle or other financial system)</inlineHelpText>
        <label>AECOM Project number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AECOM_Net_Value__c</fullName>
        <description>Limited access</description>
        <formula>Net_Revenue_Program__c +  Net_Revenue_TO_Project__c</formula>
        <label>AECOM Net Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AECOM_Primary_Department_Percent__c</fullName>
        <label>Primary Department Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AECOM_Primary_Dept_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Read Only. To change, click Opportunity Departments at the top of the page, then click the &apos;New/Edit Opportunity Departments&apos; button.</inlineHelpText>
        <label>Primary Department</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3) OR 4</booleanFilter>
            <filterItems>
                <field>AECOM_Primary_Department__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>$Source.StageName</field>
                <operation>startsWith</operation>
                <value>6,7,8,9</value>
            </filterItems>
            <filterItems>
                <field>AECOM_Primary_Department__c.Status__c</field>
                <operation>equals</operation>
                <value>Active, Inactive</value>
            </filterItems>
            <filterItems>
                <field>$User.CommunityNickname</field>
                <operation>equals</operation>
                <value>SystemNA</value>
            </filterItems>
            <infoMessage>Department must be active. Use asterisks in searching, e.g. *PDD*</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AECOM_Primary_Department__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AECOM_Primary_Dept_Program_Net_Revenue__c</fullName>
        <formula>AECOM_Primary_Department_Percent__c * Net_Revenue_Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Department Program Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AECOM_Primary_Dept_Program_Revenue_Split__c</fullName>
        <formula>AECOM_Primary_Department_Percent__c * Ceiling_Amount_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Department Program Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AECOM_Role__c</fullName>
        <description>Indicates AECOM&apos;s position in the team pursuing this opportunity</description>
        <inlineHelpText>If you select Sub, please go to the Partner/Competitor tab after saving this opportunity and add the Prime and any other Account entities involved in this pursuit, along with their roles.</inlineHelpText>
        <label>AECOM Role</label>
        <picklist>
            <picklistValues>
                <fullName>Prime</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concessionaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consortium member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design-Build Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JV Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JV Majority Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JV Minority Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPP Advisor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AECOM_Work_ID__c</fullName>
        <formula>Practice_Area_of_Primary_AECOM_Dept__c</formula>
        <inlineHelpText>Displays AECOM Work value ID so that it can be used in workflow rule filters</inlineHelpText>
        <label>AECOM Work (ID)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APD_AECOM_CJV__c</fullName>
        <inlineHelpText>Enter % of revenue related to the Construction Joint Venture Partner</inlineHelpText>
        <label>APD: AECOM CJV%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APD_AECOM_Det_Dgn_FTEs_115_hr_billrat__c</fullName>
        <formula>(APD_AECOM_NSR__c * 1000000/115)/(173*Contract_Est_Months__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula:[AECOM NSR]*1000000/115/(173*[Contract Est. Months])</inlineHelpText>
        <label>APD AECOM Det.Dgn. FTEs@$115/hr billrate</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APD_AECOM_NSR_As_Neg__c</fullName>
        <inlineHelpText>As Negotiated With Client Only (Decimal Value in Millions - e.g. 1.5 = $1,500,000)</inlineHelpText>
        <label>APD AECOM NSR ($MM) As Negotiated</label>
        <precision>8</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APD_AECOM_NSR__c</fullName>
        <formula>IF ( ISBLANK ( APD_Net_Detailed_Design_Negotiated_Fee__c),  (APD_Net_Detailed_Design_Fee_MM__c  * 0.6),  APD_Net_Detailed_Design_Negotiated_Fee__c )</formula>
        <inlineHelpText>Default = 60% of APD Net Detailed Design Fee, Otherwise As Negotiated</inlineHelpText>
        <label>APD AECOM NSR ($MM)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APD_ANSRxCAPPROB__c</fullName>
        <formula>APD_AECOM_NSR__c*Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APD ANSRxCAPPROB</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APD_Client_Name__c</fullName>
        <inlineHelpText>Enter APD Client Name (AECOM&apos;s billing client, e.g., concessionnaire)</inlineHelpText>
        <label>APD Client Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APD_DPFYAMO1__c</fullName>
        <description>Design Phase Staffing Estimates FY 2012</description>
        <formula>IF(AND (DATE(2011,11,1)&gt;Estimated_work_start_date__c , DATE(2011,11,1)&lt; Work_end_date_del__c),APD_ANSRxCAPPROB__c/Contract_Est_Months__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Design Phase Staffing Estimates FY 2012</inlineHelpText>
        <label>APD DPFYAMO1</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APD_DPFYAMO2__c</fullName>
        <formula>IF(AND (DATE(2011,12,1)&gt;Estimated_work_start_date__c , DATE(2011,12,1)&lt; Work_end_date_del__c),APD_ANSRxCAPPROB__c/Contract_Est_Months__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APD DPFYAMO2</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APD_DPFYAMO3__c</fullName>
        <formula>IF(AND (DATE(2012,1,1)&gt;Estimated_work_start_date__c , DATE(2012,1,1)&lt; Work_end_date_del__c),APD_ANSRxCAPPROB__c/Contract_Est_Months__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APD DPFYAMO3</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APD_Expected_Award_Date__c</fullName>
        <formula>APD_Proposal_Submittal_Due_Date__c + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: APD Proposal Submittal Due Date plus 30 days</inlineHelpText>
        <label>APD Expected Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APD_Is_APD__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this is an Alternative Delivery Project</inlineHelpText>
        <label>APD: Is-APD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APD_Lead_Attorney__c</fullName>
        <inlineHelpText>Select lead attorney for this opportunity</inlineHelpText>
        <label>APD Lead Attorney</label>
        <picklist>
            <picklistValues>
                <fullName>Chuck Juliana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ed Benes</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APD_MPRC_Phase__c</fullName>
        <label>APD MPRC Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Phase 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APD_MPRC_Status__c</fullName>
        <inlineHelpText>Enter notes regarding MPRC status</inlineHelpText>
        <label>APD MPRC Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APD_Net_Detailed_Design_Fee_MM__c</fullName>
        <formula>IF  ( ISBLANK (APD_Net_Detailed_Design_Negotiated_Fee__c ),  ((Construction_cost__c/1000000 ) * 0.06),  APD_Net_Detailed_Design_Negotiated_Fee__c)</formula>
        <inlineHelpText>Default = 6% of Construction Value, Otherwise As Negotiated</inlineHelpText>
        <label>APD Net Detailed Design Fee ($MM)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APD_Net_Detailed_Design_Negotiated_Fee__c</fullName>
        <inlineHelpText>As Negotiated With Client Only (Decimal Value in Millions - e.g. 1.5 = $1,500,000)</inlineHelpText>
        <label>APD Net DetailedDesign Fee ($MM) As Neg.</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APD_PPFYAMO10__c</fullName>
        <description>Proposal Phase Staffing Estimates for Month 10 of Year A (originally FY12)</description>
        <formula>IF(AND (DATE(2012,8,1)&gt;Date_RFP_expected__c , DATE(2012,8,1)&lt; Submittal_Date_Proposal__c),APD_Probable_Proposal_Cost_Fee__c/ APD_Proposal_Dur_Months__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Proposal Phase Staffing Estimates for Month 10 of Year A (originally FY12)</inlineHelpText>
        <label>APD PPFYAMO10</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APD_PPFYAMO11__c</fullName>
        <description>Proposal Phase Staffing Estimates for Month 11 of Year A (originally FY12)</description>
        <formula>IF(AND (DATE(2012,9,1)&gt;Date_RFP_expected__c , DATE(2012,9,1)&lt; Submittal_Date_Proposal__c),APD_Probable_Proposal_Cost_Fee__c/ APD_Proposal_Dur_Months__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Proposal Phase Staffing Estimates for Month 11 of Year A (originally FY12)</inlineHelpText>
        <label>APD PPFYAMO11</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APD_PPFYAMO12__c</fullName>
        <description>Proposal Phase Staffing Estimates for Month 12 of Year A (originally FY12)</description>
        <formula>IF(AND (DATE(2012,10,1)&gt;Date_RFP_expected__c , DATE(2012,10,1)&lt; Submittal_Date_Proposal__c),APD_Probable_Proposal_Cost_Fee__c/ APD_Proposal_Dur_Months__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Proposal Phase Staffing Estimates for Month 12 of Year A (originally FY12)</inlineHelpText>
        <label>APD PPFYAMO12</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APD_Potential_NTP_Date__c</fullName>
        <formula>APD_Expected_Award_Date__c + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: APD Expected Award Date plus 30 days</inlineHelpText>
        <label>APD Potential NTP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APD_Prob_of_Teaming_Agreement_Execution__c</fullName>
        <defaultValue>0.1</defaultValue>
        <inlineHelpText>Enter probablility that a teaming agreement will be executed. Enter 10, 25, 50, 75, or 100.</inlineHelpText>
        <label>APD Prob. of Teaming Agreement Execution</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APD_Probable_Proposal_Cost_Fee__c</fullName>
        <formula>IF (APD_Success_Fee_MM_As_Negotiated__c  = 0,  

((APD_Pursuit_Cash__c  /  APD_Pursuit_DLM__c * 1.4) 
+
 ( APD_Pursuit_Sweat_MM__c  /   APD_Pursuit_DLM__c  * 1.4)) ,

APD_Success_Fee_MM_As_Negotiated__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Default = [APD Pursuit Cash] over [APD Pursuit DLM] * [1.4] + [APD Pursuit Sweat] over [APD Pursuit DLM] * [1.4] or Success Fee As Negotiated</inlineHelpText>
        <label>APD Probable Proposal Cost Fee ($MM)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APD_Proposal_Dur_Months__c</fullName>
        <formula>IF(AND(Year(Submittal_Date_Proposal__c)=Year(Date_RFP_expected__c),Month(Submittal_Date_Proposal__c)=Month(Date_RFP_expected__c)),1,IF(Year(Submittal_Date_Proposal__c)=Year(Date_RFP_expected__c),Month(Submittal_Date_Proposal__c)-Month(Date_RFP_expected__c),IF(Year(Submittal_Date_Proposal__c)&gt;Year(Date_RFP_expected__c),((Year(Submittal_Date_Proposal__c)-Year(Date_RFP_expected__c))*12)+(Month(Submittal_Date_Proposal__c)-Month(Date_RFP_expected__c)),0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APD Proposal Duration (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APD_Proposal_Submittal_Due_Date__c</fullName>
        <formula>Submittal_Date_Proposal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Date RFP received plus (APD Proposal Duration Months * 30)</inlineHelpText>
        <label>APD Proposal Submittal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APD_Pursuit_Cash_As_Negotiated__c</fullName>
        <description>Only as Negotiated - Blank Uses Default Value AECOM NSR * 4% *  Probability of Teaming Agreement Execution (%) (Decimal Value in Millions)</description>
        <inlineHelpText>As Negotiated With Client Only (Decimal Value in Millions - e.g. 1.5 = $1,500,000)</inlineHelpText>
        <label>APD Pursuit Cash ($MM) As Negotiated</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APD_Pursuit_Cash__c</fullName>
        <formula>IF (APD_Pursuit_Cash_As_Negotiated__c = 0,  (APD_AECOM_NSR__c  * 0.04 *  APD_Prob_of_Teaming_Agreement_Execution__c),  APD_Pursuit_Cash_As_Negotiated__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Default = (AECOM NSR) * 4% * (Probability of Teaming Agreement Execution %), Otherwise As Negotiated</inlineHelpText>
        <label>APD Pursuit Cash ($MM)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APD_Pursuit_DLM__c</fullName>
        <defaultValue>1.7</defaultValue>
        <inlineHelpText>Default = 1.7 can be adjusted As Negotiated</inlineHelpText>
        <label>APD Pursuit DLM</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APD_Pursuit_Sweat_MM_As_Negotiated__c</fullName>
        <inlineHelpText>As Negotiated With Client Only (Decimal Value in Millions - e.g. 1.5 = $1,500,000)</inlineHelpText>
        <label>APD Pursuit Sweat ($MM) As Negotiated</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APD_Pursuit_Sweat_MM__c</fullName>
        <formula>IF (APD_Pursuit_Sweat_MM_As_Negotiated__c = 0, 
(APD_AECOM_NSR__c  * 0.01 *  APD_Prob_of_Teaming_Agreement_Execution__c ), (APD_Pursuit_Sweat_MM_As_Negotiated__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Default = (AECOM NSR) * 1% * (Probability of Teaming Agreement Execution %), Otherwise As Negotiated</inlineHelpText>
        <label>APD Pursuit Sweat ($MM)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APD_Representative__c</fullName>
        <inlineHelpText>Select name of APD Representative</inlineHelpText>
        <label>APD Representative</label>
        <picklist>
            <picklistValues>
                <fullName>Canada East: Marco Prgin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East:  Raquel Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada West: Paul Bassi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Central: Aaron Flautt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Central: Fernando Gaytan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Central: Jiri Filipovic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Central: K.N. Gunalan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Northeast: Glen Kartalis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Southeast: Ettore Morelli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US West: Andy Ghofrani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US West: Mathew Girard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US West: Tom Virding</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APD_Success_Fee_MM_As_Negotiated__c</fullName>
        <inlineHelpText>As Negotiated With Client Only (Decimal Value in Millions - e.g. 1.5 = $1,500,000)</inlineHelpText>
        <label>APD Success Fee ($MM) As Negotiated</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APD_Teaming_Agreement_Status__c</fullName>
        <label>APD Teaming Agreement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APD_Weighted_Prop_FTEs_Mult_45_DLRate__c</fullName>
        <formula>(APD_Pursuit_Cash__c +  APD_Pursuit_Sweat_MM__c  * 1000000) /
(45 *  APD_Pursuit_DLM__c  ) / (173 *  APD_Proposal_Dur_Months__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula:[Pursuit Cash]+[Pursuit Sweat]*1000000/(45*[Pursuit DLM])/(173*[APD Proposal Duration (Months)])</inlineHelpText>
        <label>APD Weighted Prop FTEs @ Mult $45 DLRate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APD_Weighted_Prop_Phase_FLR_2_58_Break__c</fullName>
        <formula>IF (Date_RFP_received__c  + 45  &gt;  TODAY () ,

APD_Pursuit_Cash__c  -  (APD_Pursuit_Cash__c /  APD_Pursuit_DLM__c * 2.58 +  APD_Pursuit_Sweat_MM__c  /  APD_Pursuit_DLM__c  * 2.58) ,

0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If([Date RFP received]+45&gt;Today) Then [Pursuit Cash] - ([Pursuit Cash]/[Pursuit DLM]*2.58) + ([Pursuit Sweat]/[Pursuit DLM]*2.58), Otherwise = 0</inlineHelpText>
        <label>APD Weighted Prop PhaseFLR@2.58Breakeven</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APIC_Number__c</fullName>
        <inlineHelpText>Enter APIC number from project setup - booked projects only.</inlineHelpText>
        <label>APIC Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARRA__c</fullName>
        <formula>Amount * ARRA_of_AECOM_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARRA $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>